[package]
name = "tiket-war-bot"
version = "0.1.0"
edition = "2021"
description = "Ultra-fast ticket war bot for tiket.com concerts"

[dependencies]
tokio = { version = "1", features = ["full"] }
chromiumoxide = { version = "0.7", features = ["tokio-runtime"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
colored = "2"
anyhow = "1"
thiserror = "2"
futures = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
